Fixed Account Creation Crash: Added Unicode -> UTC-8 conversion for all bcrypt hashing calls. CouchDB Access Verification: Added Defaults.Config paramiters for setting CouchDB username and password as latest CouchDB requires user authentication. Confirmation Email Toggle: Added a toggle to enable/disable confirmation email, disabled by default. TODO: Test in Levinux. TODO: Update front-end to Bootstrap 3/4 Beta

--- a/case.study/daybook/etc/defaults.cfg
+++ b/case.study/daybook/etc/defaults.cfg
@@ -6,7 +6,11 @@ port = 5000
 url = http://127.0.0.1:5000
 secret_key = A0Zr98j/3yX R~XHH!jmN]LWX/,?RT
 [email]
+sendmail = False
 address = super.hub.eu@gmail.com
+password = null
+[dbconnect]
+username = admin
 password = 
 [userdb]
 name = daybook_userdb
